--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ nav ul li a:hover {
 
 section {
     padding: 2em 0;
+    flex: 1;
 }
 
 .container {
@@ -142,7 +143,7 @@ footer {
     color: white;
     text-align: center;
     padding: 1em 0;
-    position: absolute;
-    width: 100%;
+    margin-top: auto;
+    width: 90%;
     bottom: 0;
 }
